--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-16 02:40 -->
+<!-- 2022-12-17 02:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,50 +46,50 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga16bfef">1. 妙妙文章</a>
+<li><a href="#orge2bde77">1. 妙妙文章</a>
 <ul>
-<li><a href="#org8094154">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgfd6ee35">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org17e298f">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgeaf9d63">1.4. 关于编辑器</a></li>
-<li><a href="#org4721573">1.5. 关于代码</a>
+<li><a href="#orgc27284b">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgb23e2e2">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orga3777e7">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org280963e">1.4. 关于编辑器</a></li>
+<li><a href="#orgb368978">1.5. 关于代码</a>
 <ul>
-<li><a href="#org55127f9">1.5.1. Lisp</a></li>
+<li><a href="#org25c6aa5">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgb72a984">1.6. 关于CPU</a></li>
-<li><a href="#orgc75e13a">1.7. 关于算法</a>
+<li><a href="#org5d9986a">1.6. 关于CPU</a></li>
+<li><a href="#orgac2dba0">1.7. 关于算法</a>
 <ul>
-<li><a href="#org73e0b6e">1.7.1. 关于随机</a></li>
+<li><a href="#orgb8913ce">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org7311de5">1.8. 关于AI</a></li>
-<li><a href="#org900eddb">1.9. 关于软件 &#x2014; 面对复杂系统</a>
+<li><a href="#orgd2687c4">1.8. 关于AI</a></li>
+<li><a href="#org1920a30">1.9. 关于软件 &#x2014; 面对复杂系统</a>
 <ul>
-<li><a href="#org931e17a">1.9.1. Everything is a file</a></li>
-<li><a href="#org224a262">1.9.2. SQLite</a></li>
+<li><a href="#orgcbef4aa">1.9.1. Everything is a file</a></li>
+<li><a href="#org7a91185">1.9.2. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgbf1014e">1.10. 关于workflow</a></li>
+<li><a href="#org0e2ff45">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org62f46d8">2. 棒棒视频</a>
+<li><a href="#org862b575">2. 棒棒视频</a>
 <ul>
-<li><a href="#org262a751">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org32d4094">2.2. 迷因水母</a></li>
-<li><a href="#org9426d5c">2.3. 纪录片</a></li>
-<li><a href="#org1daec85">2.4. 各种剧</a></li>
-<li><a href="#org0cd2553">2.5. 电影</a></li>
+<li><a href="#orgab3fda1">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgcabf09b">2.2. 迷因水母</a></li>
+<li><a href="#org8801de0">2.3. 纪录片</a></li>
+<li><a href="#org233a21a">2.4. 各种剧</a></li>
+<li><a href="#org8de459f">2.5. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgf984640">3. 快乐游戏</a></li>
-<li><a href="#org82cdfc7">4. 宝藏博主</a></li>
-<li><a href="#org6522fba">5. 有意思的</a>
+<li><a href="#orgc6335e8">3. 快乐游戏</a></li>
+<li><a href="#org3866f94">4. 宝藏博主</a></li>
+<li><a href="#org151fcc2">5. 有意思的</a>
 <ul>
-<li><a href="#org22009f2">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org18a1c2b">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org0590fe6">6. 我想玩的</a></li>
+<li><a href="#orgd7cecb6">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -98,8 +98,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orga16bfef" class="outline-2">
-<h2 id="orga16bfef"><span class="section-number-2">1.</span> <a href="#orga16bfef">妙妙文章</a></h2>
+<div id="outline-container-orge2bde77" class="outline-2">
+<h2 id="orge2bde77"><span class="section-number-2">1.</span> <a href="#orge2bde77">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -434,7 +434,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org86da8ef">
+<figure id="org76ed0bc">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -507,8 +507,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </ul>
 </div>
 
-<div id="outline-container-org8094154" class="outline-3">
-<h3 id="org8094154"><span class="section-number-3">1.1.</span> <a href="#org8094154">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orgc27284b" class="outline-3">
+<h3 id="orgc27284b"><span class="section-number-3">1.1.</span> <a href="#orgc27284b">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -549,8 +549,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </div>
 </div>
 
-<div id="outline-container-orgfd6ee35" class="outline-3">
-<h3 id="orgfd6ee35"><span class="section-number-3">1.2.</span> <a href="#orgfd6ee35">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgb23e2e2" class="outline-3">
+<h3 id="orgb23e2e2"><span class="section-number-3">1.2.</span> <a href="#orgb23e2e2">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -584,8 +584,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org17e298f" class="outline-3">
-<h3 id="org17e298f"><span class="section-number-3">1.3.</span> <a href="#org17e298f">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orga3777e7" class="outline-3">
+<h3 id="orga3777e7"><span class="section-number-3">1.3.</span> <a href="#orga3777e7">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -619,8 +619,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgeaf9d63" class="outline-3">
-<h3 id="orgeaf9d63"><span class="section-number-3">1.4.</span> <a href="#orgeaf9d63">关于编辑器</a></h3>
+<div id="outline-container-org280963e" class="outline-3">
+<h3 id="org280963e"><span class="section-number-3">1.4.</span> <a href="#org280963e">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -636,8 +636,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org4721573" class="outline-3">
-<h3 id="org4721573"><span class="section-number-3">1.5.</span> <a href="#org4721573">关于代码</a></h3>
+<div id="outline-container-orgb368978" class="outline-3">
+<h3 id="orgb368978"><span class="section-number-3">1.5.</span> <a href="#orgb368978">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -662,8 +662,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org55127f9" class="outline-4">
-<h4 id="org55127f9"><span class="section-number-4">1.5.1.</span> <a href="#org55127f9">Lisp</a></h4>
+<div id="outline-container-org25c6aa5" class="outline-4">
+<h4 id="org25c6aa5"><span class="section-number-4">1.5.1.</span> <a href="#org25c6aa5">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -686,8 +686,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgb72a984" class="outline-3">
-<h3 id="orgb72a984"><span class="section-number-3">1.6.</span> <a href="#orgb72a984">关于CPU</a></h3>
+<div id="outline-container-org5d9986a" class="outline-3">
+<h3 id="org5d9986a"><span class="section-number-3">1.6.</span> <a href="#org5d9986a">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -702,8 +702,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgc75e13a" class="outline-3">
-<h3 id="orgc75e13a"><span class="section-number-3">1.7.</span> <a href="#orgc75e13a">关于算法</a></h3>
+<div id="outline-container-orgac2dba0" class="outline-3">
+<h3 id="orgac2dba0"><span class="section-number-3">1.7.</span> <a href="#orgac2dba0">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -722,8 +722,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org73e0b6e" class="outline-4">
-<h4 id="org73e0b6e"><span class="section-number-4">1.7.1.</span> <a href="#org73e0b6e">关于随机</a></h4>
+<div id="outline-container-orgb8913ce" class="outline-4">
+<h4 id="orgb8913ce"><span class="section-number-4">1.7.1.</span> <a href="#orgb8913ce">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -737,8 +737,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org7311de5" class="outline-3">
-<h3 id="org7311de5"><span class="section-number-3">1.8.</span> <a href="#org7311de5">关于AI</a></h3>
+<div id="outline-container-orgd2687c4" class="outline-3">
+<h3 id="orgd2687c4"><span class="section-number-3">1.8.</span> <a href="#orgd2687c4">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -748,8 +748,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org900eddb" class="outline-3">
-<h3 id="org900eddb"><span class="section-number-3">1.9.</span> <a href="#org900eddb">关于软件 &#x2014; 面对复杂系统</a></h3>
+<div id="outline-container-org1920a30" class="outline-3">
+<h3 id="org1920a30"><span class="section-number-3">1.9.</span> <a href="#org1920a30">关于软件 &#x2014; 面对复杂系统</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -760,8 +760,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org931e17a" class="outline-4">
-<h4 id="org931e17a"><span class="section-number-4">1.9.1.</span> <a href="#org931e17a">Everything is a file</a></h4>
+<div id="outline-container-orgcbef4aa" class="outline-4">
+<h4 id="orgcbef4aa"><span class="section-number-4">1.9.1.</span> <a href="#orgcbef4aa">Everything is a file</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 <a href="https://blog.sunfishcode.online/">sunfishcode</a> 的 "Everything Is A File" 系列博文
@@ -780,8 +780,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-org224a262" class="outline-4">
-<h4 id="org224a262"><span class="section-number-4">1.9.2.</span> <a href="#org224a262">SQLite</a></h4>
+<div id="outline-container-org7a91185" class="outline-4">
+<h4 id="org7a91185"><span class="section-number-4">1.9.2.</span> <a href="#org7a91185">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-2">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -795,8 +795,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-orgbf1014e" class="outline-3">
-<h3 id="orgbf1014e"><span class="section-number-3">1.10.</span> <a href="#orgbf1014e">关于workflow</a></h3>
+<div id="outline-container-org0e2ff45" class="outline-3">
+<h3 id="org0e2ff45"><span class="section-number-3">1.10.</span> <a href="#org0e2ff45">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -806,8 +806,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-org62f46d8" class="outline-2">
-<h2 id="org62f46d8"><span class="section-number-2">2.</span> <a href="#org62f46d8">棒棒视频</a></h2>
+<div id="outline-container-org862b575" class="outline-2">
+<h2 id="org862b575"><span class="section-number-2">2.</span> <a href="#org862b575">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -868,8 +868,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org262a751" class="outline-3">
-<h3 id="org262a751"><span class="section-number-3">2.1.</span> <a href="#org262a751">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgab3fda1" class="outline-3">
+<h3 id="orgab3fda1"><span class="section-number-3">2.1.</span> <a href="#orgab3fda1">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -900,8 +900,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org32d4094" class="outline-3">
-<h3 id="org32d4094"><span class="section-number-3">2.2.</span> <a href="#org32d4094">迷因水母</a></h3>
+<div id="outline-container-orgcabf09b" class="outline-3">
+<h3 id="orgcabf09b"><span class="section-number-3">2.2.</span> <a href="#orgcabf09b">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -916,8 +916,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org9426d5c" class="outline-3">
-<h3 id="org9426d5c"><span class="section-number-3">2.3.</span> <a href="#org9426d5c">纪录片</a></h3>
+<div id="outline-container-org8801de0" class="outline-3">
+<h3 id="org8801de0"><span class="section-number-3">2.3.</span> <a href="#org8801de0">纪录片</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/35506331/">晚安机遇号</a> Oppy的15年</li>
@@ -925,8 +925,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1daec85" class="outline-3">
-<h3 id="org1daec85"><span class="section-number-3">2.4.</span> <a href="#org1daec85">各种剧</a></h3>
+<div id="outline-container-org233a21a" class="outline-3">
+<h3 id="org233a21a"><span class="section-number-3">2.4.</span> <a href="#org233a21a">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -950,8 +950,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0cd2553" class="outline-3">
-<h3 id="org0cd2553"><span class="section-number-3">2.5.</span> <a href="#org0cd2553">电影</a></h3>
+<div id="outline-container-org8de459f" class="outline-3">
+<h3 id="org8de459f"><span class="section-number-3">2.5.</span> <a href="#org8de459f">电影</a></h3>
 <div class="outline-text-3" id="text-2-5">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -977,7 +977,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="org0e285ed">
+<figure id="org2191612">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -995,8 +995,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgf984640" class="outline-2">
-<h2 id="orgf984640"><span class="section-number-2">3.</span> <a href="#orgf984640">快乐游戏</a></h2>
+<div id="outline-container-orgc6335e8" class="outline-2">
+<h2 id="orgc6335e8"><span class="section-number-2">3.</span> <a href="#orgc6335e8">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -1026,8 +1026,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org82cdfc7" class="outline-2">
-<h2 id="org82cdfc7"><span class="section-number-2">4.</span> <a href="#org82cdfc7">宝藏博主</a></h2>
+<div id="outline-container-org3866f94" class="outline-2">
+<h2 id="org3866f94"><span class="section-number-2">4.</span> <a href="#org3866f94">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -1038,7 +1038,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org0f55dad">
+<figure id="orgb16b17f">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1046,8 +1046,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org6522fba" class="outline-2">
-<h2 id="org6522fba"><span class="section-number-2">5.</span> <a href="#org6522fba">有意思的</a></h2>
+<div id="outline-container-org151fcc2" class="outline-2">
+<h2 id="org151fcc2"><span class="section-number-2">5.</span> <a href="#org151fcc2">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1073,8 +1073,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org22009f2" class="outline-3">
-<h3 id="org22009f2"><span class="section-number-3">5.1.</span> <a href="#org22009f2">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org18a1c2b" class="outline-3">
+<h3 id="org18a1c2b"><span class="section-number-3">5.1.</span> <a href="#org18a1c2b">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1086,8 +1086,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org0590fe6" class="outline-2">
-<h2 id="org0590fe6"><span class="section-number-2">6.</span> <a href="#org0590fe6">我想玩的</a></h2>
+<div id="outline-container-orgd7cecb6" class="outline-2">
+<h2 id="orgd7cecb6"><span class="section-number-2">6.</span> <a href="#orgd7cecb6">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1110,7 +1110,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-13 21:16</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-16 02:40</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-17 02:42</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/index.org">index.org</a></td></tr>
 </table>
