--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-16 02:40 -->
+<!-- 2022-12-17 02:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc496eee">1. 笔记</a></li>
-<li><a href="#org2a631c7">2. 推送</a></li>
-<li><a href="#org2df9ce3">3. Git</a></li>
-<li><a href="#org156a71f">4. XBox</a></li>
-<li><a href="#org253a35e">5. Bilibili</a></li>
+<li><a href="#orgf37b788">1. 笔记</a></li>
+<li><a href="#orgf7de947">2. 推送</a></li>
+<li><a href="#org5476f3e">3. Git</a></li>
+<li><a href="#orgf0f0e3c">4. XBox</a></li>
+<li><a href="#org0851f1f">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgc496eee" class="outline-2">
-<h2 id="orgc496eee"><span class="section-number-2">1.</span> <a href="#orgc496eee">笔记</a></h2>
+<div id="outline-container-orgf37b788" class="outline-2">
+<h2 id="orgf37b788"><span class="section-number-2">1.</span> <a href="#orgf37b788">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-org2a631c7" class="outline-2">
-<h2 id="org2a631c7"><span class="section-number-2">2.</span> <a href="#org2a631c7">推送</a></h2>
+<div id="outline-container-orgf7de947" class="outline-2">
+<h2 id="orgf7de947"><span class="section-number-2">2.</span> <a href="#orgf7de947">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-org2df9ce3" class="outline-2">
-<h2 id="org2df9ce3"><span class="section-number-2">3.</span> <a href="#org2df9ce3">Git</a></h2>
+<div id="outline-container-org5476f3e" class="outline-2">
+<h2 id="org5476f3e"><span class="section-number-2">3.</span> <a href="#org5476f3e">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-org156a71f" class="outline-2">
-<h2 id="org156a71f"><span class="section-number-2">4.</span> <a href="#org156a71f">XBox</a></h2>
+<div id="outline-container-orgf0f0e3c" class="outline-2">
+<h2 id="orgf0f0e3c"><span class="section-number-2">4.</span> <a href="#orgf0f0e3c">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器, 见<a href="../pcap2socks.html">使用 pcap2socks 加速 XBox</a>
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-org253a35e" class="outline-2">
-<h2 id="org253a35e"><span class="section-number-2">5.</span> <a href="#org253a35e">Bilibili</a></h2>
+<div id="outline-container-org0851f1f" class="outline-2">
+<h2 id="org0851f1f"><span class="section-number-2">5.</span> <a href="#org0851f1f">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 21:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-16 02:40</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-17 02:42</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/tools.org">tools.org</a></td></tr>
 </table>
