--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-16 02:40 -->
+<!-- 2022-12-17 02:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga8ebb38">1. What is Vectored IO</a></li>
-<li><a href="#orga6b6d70">2. Vectored IO in Linux</a></li>
-<li><a href="#org3b18b9c">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#orge806ff4">4. Examples</a>
+<li><a href="#org128fe22">1. What is Vectored IO</a></li>
+<li><a href="#org684a387">2. Vectored IO in Linux</a></li>
+<li><a href="#org27281a9">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org5ba00f1">4. Examples</a>
 <ul>
-<li><a href="#org5ca5cbf">4.1. <code>write()</code></a></li>
-<li><a href="#org6fa9387">4.2. <code>writev()</code></a></li>
+<li><a href="#org23c1f28">4.1. <code>write()</code></a></li>
+<li><a href="#org2fcbb14">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-orga8ebb38" class="outline-2">
-<h2 id="orga8ebb38"><span class="section-number-2">1.</span> <a href="#orga8ebb38">What is Vectored IO</a></h2>
+<div id="outline-container-org128fe22" class="outline-2">
+<h2 id="org128fe22"><span class="section-number-2">1.</span> <a href="#org128fe22">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-orga6b6d70" class="outline-2">
-<h2 id="orga6b6d70"><span class="section-number-2">2.</span> <a href="#orga6b6d70">Vectored IO in Linux</a></h2>
+<div id="outline-container-org684a387" class="outline-2">
+<h2 id="org684a387"><span class="section-number-2">2.</span> <a href="#org684a387">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-org3b18b9c" class="outline-2">
-<h2 id="org3b18b9c"><span class="section-number-2">3.</span> <a href="#org3b18b9c">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org27281a9" class="outline-2">
+<h2 id="org27281a9"><span class="section-number-2">3.</span> <a href="#org27281a9">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-orge806ff4" class="outline-2">
-<h2 id="orge806ff4"><span class="section-number-2">4.</span> <a href="#orge806ff4">Examples</a></h2>
+<div id="outline-container-org5ba00f1" class="outline-2">
+<h2 id="org5ba00f1"><span class="section-number-2">4.</span> <a href="#org5ba00f1">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org5ca5cbf" class="outline-3">
-<h3 id="org5ca5cbf"><span class="section-number-3">4.1.</span> <a href="#org5ca5cbf"><code>write()</code></a></h3>
+<div id="outline-container-org23c1f28" class="outline-3">
+<h3 id="org23c1f28"><span class="section-number-3">4.1.</span> <a href="#org23c1f28"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-org6fa9387" class="outline-3">
-<h3 id="org6fa9387"><span class="section-number-3">4.2.</span> <a href="#org6fa9387"><code>writev()</code></a></h3>
+<div id="outline-container-org2fcbb14" class="outline-3">
+<h3 id="org2fcbb14"><span class="section-number-3">4.2.</span> <a href="#org2fcbb14"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-16 02:40</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-17 02:42</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/linux/vectored-io.org">vectored-io.org</a></td></tr>
 </table>
